# ogl-renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  fragmentShader.fs.glsl  main.cpp  shaderProgram.cpp  shaderProgram.h  shaderProgram.hpp  vertexShader.vs.glsl  window.hpp
include/renderer/: camera.hpp  matrix.hpp  mesh.hpp  shaderProgram.hpp  texture.hpp  vector.hpp  vertex.hpp  window.hpp
src/renderer/: camera.cpp  main.cpp  matrix.cpp  mesh.cpp  shaderProgram.cpp  texture.cpp  window.cpp
